Part 2 has been updated to use the latest Panama FFI&FFM api