@@ -1,5 +1,3 @@
 java -cp classes \
  --enable-native-access=ALL-UNNAMED \
- --enable-preview \
- --source 19 \
- src/StructsArray.java
+ StructsArray
